# Game-of-Terminal-Ill-Life

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main  main.cpp
src/controller/: CMakeLists.txt  TerminalController.h
src/model/: CMakeLists.txt  TerminalModel.h  grid.h  rules.h
src/view/: CMakeLists.txt  TerminalView.h  terminal.cpp  terminal.h
